# dsc

./: Doxyfile  Makefile.am  Makefile.in  README.md  configure  configure.ac  configure~
.github/workflows/: test.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.3
docs/: README_8md.html  annotated.html  array__queue_8h.html  array__queue_8h_source.html  array__stack_8h.html  array__stack_8h_source.html  classes.html  dir_0aa88ba44bbec23a6de57be31686ecf8.html  dir_425a66f099a13b02e0dd881183cf5538.html  dir_6868028a40b6e7fef0e0830f7caf10f6.html  dir_cac49a9e31bf4f7cd5ab50e2700548d0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dynamic__list_8h.html  dynamic__list_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  linked__queue_8h.html  linked__queue_8h_source.html  linked__stack_8h.html  linked__stack_8h_source.html  menudata.js  multilevel__priority__queue_8h.html  multilevel__priority__queue_8h_source.html  ordered__priority__queue_8h.html  ordered__priority__queue_8h_source.html  singly__linked__list_8h.html  singly__linked__list_8h_source.html  structdsc__array__queue__t.html  structdsc__dynamic__list__t.html  structdsc__multilevel__priority__queue__t.html  structdsc__ordered__priority__queue__t.html  structdsc__singly__linked__list__node__t.html  structdsc__singly__linked__list__t.html  structdsc__unordered__priority__queue__t.html  (+2 more)
docs/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  files_7.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_6.js
include/list/: dynamic_list.h  singly_linked_list.h
include/priority-queue/: multilevel_priority_queue.h  ordered_priority_queue.h  unordered_priority_queue.h
include/queue/: array_queue.h  linked_queue.h
include/stack/: array_stack.h  linked_stack.h
src/list/: dynamic_list.c  singly_linked_list.c
src/queue/: array_queue.c  linked_queue.c
src/stack/: array_stack.c  linked_stack.c
test/: driver.c
test/list/: test_dynamic_list.c  test_dynamic_list.h  test_singly_linked_list.c  (+1 more)
(+14 files in other folders)
